# aoc_2025_03

./: Cargo.toml  Readme.md
benches/: my_bench.rs
data/: example.txt
src/: battery_bank.rs  file_parser.rs  lib.rs  main.rs
